@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE edl PUBLIC "-//OPENEMULATOR//DTD EDL 1.0//EN" "http://www.openemulator.org/DTD/edl-1.0.dtd">
-<edl version="1.0" label="Apple Monitor II" image="images/Apple/Apple Monitor II.png" description="The Apple Monitor II is a CRT-based green monochrome 12-inch monitor manufactured by Apple Computer for the Apple II personal computer family.">
+<edl version="1.0" generator="OpenEmulator" build="700" label="Apple Monitor II" image="images/Apple/Apple Monitor II.png" description="The Apple Monitor II is a CRT-based green monochrome 12-inch monitor manufactured by Apple Computer for the Apple II personal computer family.">
     
     <device id="appleMonitorII" label="Apple Monitor II" image="images/Apple/Apple Monitor II.png">
         <setting ref="appleMonitorII.monitor" name="videoBrightness" label="Brightness" type="slider" options="-1.0,1.0"/>
