@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE edl PUBLIC "-//OPENEMULATOR//DTD EDL 1.0//EN" "http://www.openemulator.org/DTD/edl-1.0.dtd">
-<edl version="1.0" label="R&amp;D CFFA1" image="images/R&amp;D/R&amp;D CFFA1.png" description="The CFFA1 interface card is used for accessing a CompactFlash/IDE device on an Apple-1 computer. It also provides 32kiB of RAM. To start the file manager, enter 9000R in the monitor.">
+<edl version="1.0" generator="OpenEmulator" build="700" label="R&amp;D CFFA1" image="images/R&amp;D/R&amp;D CFFA1.png" description="The CFFA1 interface card is used for accessing a CompactFlash/IDE device on an Apple-1 computer. It also provides 32kiB of RAM. To start the file manager, enter 9000R in the monitor.">
     
     <device id="rdCFFA1" label="R&amp;D CFFA1" image="images/R&amp;D/R&amp;D CFFA1.png">
     </device>
